--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -1,1 +1,21 @@
-<p>quien-soy works!</p>
+<div class="container">
+    <div class="form-control border-orange">
+      <div class="row">
+        <h1 class="text-center text-orange">Luquez Eliseo</h1>
+        <h5 class="text-orange text-center">
+          Programador, amo y señor de 1 gato(Gaspar) y 1 perro(Matthew).
+        </h5>
+        <h6 class="text-orange text-center">
+            Intentando hacer la sala de juegos de LabIV.
+        </h6>
+        <div class="text-center">
+          <img src="../../../assets/quiensoy.PNG">
+        </div>
+        <div class="float-right">
+          <a href="https://github.com/EliseoLuquez">
+            <input class="btn btn-success" type="button" value="Visita mi Github" />
+         </a>
+        </div>
+      </div>
+    </div>
+  </div>
