--- a/src/app/componentes/letra/letra.component.html
+++ b/src/app/componentes/letra/letra.component.html
@@ -5,9 +5,9 @@
         </div>
     </div> -->
      
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <!-- <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4"></h1>
         <ul class="list-group">
           <li class="list-group-item" *ngFor="let letra of arrayLetras">{{producto.nombre}}</li>
         </ul>
-    </div>
+    </div> -->
