--- a/src/app/componentes/menu-principal/menu-principal.component.html
+++ b/src/app/componentes/menu-principal/menu-principal.component.html
@@ -15,6 +15,7 @@
         <a class="py-2 d-none d-md-inline-block" (click)="goMayorMenor()">Mayor o Menor</a> 
         <a class="py-2 d-none d-md-inline-block" (click)="goAhorcado()">Ahorcado</a> 
         <a class="py-2 d-none d-md-inline-block" (click)="goPreguntados()">Preguntados</a> 
+        <a class="py-2 d-none d-md-inline-block" (click)="goJuegoPropio()">Juego Propio</a> 
         <a class="py-2 d-none d-md-inline-block">{{email}}</a>
         <a class="py-2 d-none d-md-inline-block" (click)="logout()">Logout</a>
       </ng-template>
