--- a/src/app/juegos/ahorcado/ahorcado.component.css
+++ b/src/app/juegos/ahorcado/ahorcado.component.css
@@ -1,9 +1,24 @@
+#general{
+    background: rgb(160, 160, 160);
+    width: 100%;
+    height: 100%;
+}
+
+
 #horca{
-    height: 600px;
+    height: 400px;
     width: 300px;
     display:block;
     margin:auto;
+    border-radius: 30px;
+    
     /*background-image: url('../../../assets/ahorcado/ahorcado.jpg');*/
+}
+
+#ahorcado{
+    background: rgb(179, 84, 84);
+    border-radius: 30px;
+    margin: auto;
 }
 
 #mensaje{
