--- a/src/app/juegos/ahorcado/ahorcado.component.html
+++ b/src/app/juegos/ahorcado/ahorcado.component.html
@@ -1,29 +1,33 @@
 
-
-<h1 id="titulo">Ahorcado</h1>
-
-<div id="ahorcado">
-  <img id="horca" src="../../../assets/ahorcado/ahorcado.jpg">
-</div>
-<div id="mensaje">
-  <h1>{{mensaje}}</h1>
-</div>
-<div  id="empezar">
-  <button (click)="empezar()">Empezar</button>
-</div>
+<div class="container-fluid" id="general"> 
+  <div class="col-12 p-2">
+    <h1 id="titulo"><strong>AHORCADO</strong></h1>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <div id="ahorcado" class=" p-2">
+        <img id="horca" src="../../../assets/ahorcado/ahorcado.jpg">
+      </div>
+      <div id="empezar" *ngIf="!empezado">
+        <button class="btn btn-lg alert-danger" (click)="empezar()"><strong>EMPEZAR</strong></button>
+      </div>
+    </div>
+    <div class="col-6">
+    <div class="form-group" id="mensaje" *ngIf="resultado">
+        <h1><strong>{{mensaje}}</strong></h1>
+    </div>
       <h1 class="my-0 font-weight-normal" id="palabraEnGuiones">{{palabraEnGuiones}}</h1>
-
-      <h1 class="card-title pricing-card-title"><small class="text-muted"></small></h1>
-      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4"></h1>
+      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center" *ngIf="empezado">
         <h3>Introduce una letra</h3>
         <div class="row">
-            <div class="col-3" *ngFor="let letra of arrayLetras">
-                <button (click)="onLetra(letra.nombre)">{{letra.nombre}}</button>
-
-              
+          <div  class="col-sm-4" *ngFor="let letra of arrayLetras">
+              <input type="button" class="btn alert-danger col-sm-4 text-center pt-2" (click)="onLetra(letra.nombre)" value="{{letra.nombre}}">
             </div>
       </div>
     </div>
+    </div>
+  </div>
+</div>
+
 
 
