--- a/src/app/juegos/juegopropio/juegopropio.component.css
+++ b/src/app/juegos/juegopropio/juegopropio.component.css
@@ -5,3 +5,8 @@
     margin:auto;
     /*background-image: url('../../../assets/ahorcado/ahorcado.jpg');*/
 }
+ #up{
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
+ }
