--- a/src/app/componentes/menu-principal/menu-principal.component.html
+++ b/src/app/componentes/menu-principal/menu-principal.component.html
@@ -16,6 +16,7 @@
         <a class="py-2 d-none d-md-inline-block" type="button" (click)="goAhorcado()">Ahorcado</a> 
         <a class="py-2 d-none d-md-inline-block" type="button" (click)="goPreguntados()">Preguntados</a> 
         <a class="py-2 d-none d-md-inline-block" type="button" (click)="goJuegoPropio()">Juego Propio</a> 
+        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goEncuesta()">Encuesta</a> 
         <a class="py-2 d-none d-md-inline-block">{{email}}</a>
         <a class="py-2 d-none d-md-inline-block" type="button" (click)="logout()">Logout</a>
       </ng-template>
