--- a/src/app/ingreso/login/login.component.html
+++ b/src/app/ingreso/login/login.component.html
@@ -13,12 +13,13 @@
           <div class="form-group">
             <label for="password">Password</label>
             <input id="password" type="password" name="password" [(ngModel)]="password" required="required"/>
+            <span class="text-danger">{{msjError}}</span>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label class="form-remember">
               <input type="checkbox"/>Remember Me
             </label><a class="form-recovery" href="#">Forgot Password?</a>
-          </div>
+          </div> -->
           <div class="form-group">
             <button type="button" (click)="login()">Log In</button>
           </div>
