--- a/src/app/ingreso/registro/registro.component.html
+++ b/src/app/ingreso/registro/registro.component.html
@@ -43,6 +43,7 @@
           <div class="form-group">
             <label for="email">Correo Electronico</label>
             <input id="email" type="email" name="email" [(ngModel)]="email" required="required"/>
+            <span class="text-danger">{{msjError}}</span>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
