--- a/src/app/juegos/juegopropio/juegopropio.component.html
+++ b/src/app/juegos/juegopropio/juegopropio.component.html
@@ -31,7 +31,7 @@
       <div *ngIf="empezado">
           <h2>Puntos:</h2>
           <h2>{{puntaje}}</h2>  
-          <p>{{timeLeft}} Seconds Left....</p>
+          <p><strong>{{timeLeft}}</strong> Seconds Left....</p>
           <!-- <button (click)='startTimer()'>Start Timer</button>
           <button (click)='pauseTimer()'>Pause</button> -->
         <!-- <img  src="../../../assets/flechas/arriba.png"> -->
