--- a/src/app/componentes/menu-principal/menu-principal.component.html
+++ b/src/app/componentes/menu-principal/menu-principal.component.html
@@ -1,25 +1,47 @@
 <nav class="site-header sticky-top py-1">
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2" href="#" aria-label="Product">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
-      </a>
-      <!-- <ng-template [ngIf]="!this.authService.usuario.logueado; else logueado"> -->
-        <ng-template [ngIf]="!logueado">
-        <a class="py-2 d-none d-md-inline-block" href="ingreso/registro">Registro</a>
-        <a class="py-2 d-none d-md-inline-block" href="ingreso/login">Login</a>
-      </ng-template>
-      <ng-template [ngIf]="logueado">
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goHome()">Home</a>
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goQuienSoy()">Quien Soy</a>
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goChat()">Chat</a>
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goMayorMenor()">Mayor o Menor</a> 
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goAhorcado()">Ahorcado</a> 
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goPreguntados()">Preguntados</a> 
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goJuegoPropio()">Juego Propio</a> 
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="goEncuesta()">Encuesta</a> 
-        <a class="py-2 d-none d-md-inline-block">{{email}}</a>
-        <a class="py-2 d-none d-md-inline-block" type="button" (click)="logout()">Logout</a>
-      </ng-template>
-    
+  <div class="container d-flex flex-column flex-md-row justify-content-between">
+    <a class="py-2" href="#" aria-label="Product">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
+        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img"
+        viewBox="0 0 24 24" focusable="false">
+        <circle cx="12" cy="12" r="10" />
+        <path
+          d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
+      </svg>
+    </a>
+    <!-- <ng-template [ngIf]="!this.authService.usuario.logueado; else logueado"> -->
+    <div *ngIf="!this.logueado; else elseBlock">
+      <a class="py-2 d-none d-md-inline-block btn"  type="button" (click)="goRegistro()">Registro</a>
+      <a class="py-2 d-none d-md-inline-block btn"  type="button" (click)="goLogin()">Login</a>
     </div>
-  </nav>
+    <ng-template #elseBlock>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goHome()"> Home </a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goQuienSoy()"> Quien Soy </a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goChat()">Chat</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goMayorMenor()">Mayor o Menor</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goAhorcado()">Ahorcado</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goPreguntados()">Preguntados</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goJuegoPropio()">Juego Propio</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goEncuesta()">Encuesta</a>
+      <a class="py-2 d-none d-md-inline-block btn">{{email}}</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="logout()">Logout</a>
+    </ng-template>
+    <!-- <ng-template [ngIf]="!this.logueado">
+      <a class="py-2 d-none d-md-inline-block btn" href="ingreso/registro">Registro</a>
+      <a class="py-2 d-none d-md-inline-block btn" href="ingreso/login">Login</a>
+    </ng-template>
+    <ng-template [ngIf]="this.logueado">
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goHome()"> Home </a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goQuienSoy()"> Quien Soy </a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goChat()">Chat</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goMayorMenor()">Mayor o Menor</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goAhorcado()">Ahorcado</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goPreguntados()">Preguntados</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goJuegoPropio()">Juego Propio</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="goEncuesta()">Encuesta</a>
+      <a class="py-2 d-none d-md-inline-block btn">{{email}}</a>
+      <a class="py-2 d-none d-md-inline-block btn" type="button" (click)="logout()">Logout</a>
+    </ng-template> -->
+
+  </div>
+</nav>
